--- a/app/src/main/res/layout/activity_invitation_list.xml
+++ b/app/src/main/res/layout/activity_invitation_list.xml
@@ -68,6 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:enabled="true"
+                android:foreground="?attr/selectableItemBackground"
                 android:onClick="@{() -> model.goMainActivity()}"
                 android:text="@string/make_invitation"
                 android:textSize="24dp"
