--- a/app/src/main/res/layout/item_invitation_list.xml
+++ b/app/src/main/res/layout/item_invitation_list.xml
@@ -17,7 +17,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
+            android:foreground="?attr/selectableItemBackground"
             app:cardCornerRadius="10dp"
             app:cardUseCompatPadding="true">
 
