--- a/app/src/main/res/layout/item_invitation_list.xml
+++ b/app/src/main/res/layout/item_invitation_list.xml
@@ -65,9 +65,10 @@
 
                     <TextView
                         android:id="@+id/tvTitleItemInvitationList"
-                        android:layout_width="wrap_content"
+                        android:layout_width="124dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
+                        android:singleLine="true"
                         android:textColor="@color/black"
                         android:textSize="14sp"
                         android:textStyle="bold"
